--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -89,6 +89,44 @@
     "\n",
     "# print(arr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[4 5 6 7]\n",
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n",
+      "[[0 1 2]\n",
+      " [5 6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 2\n",
+    "\n",
+    "# - Given the array `arr = np.array([1, 2, 3, 4, 5])`, access the third element.\n",
+    "arr = numpy.array([1, 2, 3, 4, 5])\n",
+    "print(arr[2])\n",
+    "\n",
+    "# - Create a 2D array of shape (4, 4) and access the entire second row.\n",
+    "arr = numpy.arange(16).reshape(4, 4)\n",
+    "print(arr[1])\n",
+    "\n",
+    "# - Given an array `arr = np.arange(25).reshape(5, 5)`, extract the subarray containing the first two rows and the first three columns.\n",
+    "arr = numpy.arange(25).reshape(5, 5)\n",
+    "sub_arr = arr[:2, :3]\n",
+    "print(sub_arr)"
+   ]
   }
  ],
  "metadata": {
