--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -101,11 +101,6 @@
      "text": [
       "3\n",
       "[4 5 6 7]\n",
-      "[[ 0  1  2  3  4]\n",
-      " [ 5  6  7  8  9]\n",
-      " [10 11 12 13 14]\n",
-      " [15 16 17 18 19]\n",
-      " [20 21 22 23 24]]\n",
       "[[0 1 2]\n",
       " [5 6 7]]\n"
      ]
@@ -126,6 +121,45 @@
     "arr = numpy.arange(25).reshape(5, 5)\n",
     "sub_arr = arr[:2, :3]\n",
     "print(sub_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The addition equal: [0 2 4 6 8]\n",
+      "The multiplication equal: [ 0  1  4  9 16]\n",
+      "[[10 20 30]\n",
+      " [90 60 20]]\n",
+      "4.0\n",
+      "36\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 3\n",
+    "\n",
+    "# - Create two arrays of size 5 and perform element-wise addition and multiplication between them.\n",
+    "arr_1 = numpy.arange(5)\n",
+    "arr_2 = numpy.arange(5)\n",
+    "print(f\"The addition equal: {arr_1 + arr_2}\")\n",
+    "print(f\"The multiplication equal: {arr_1 * arr_2}\")\n",
+    "\n",
+    "# - Multiply all elements of an array by 10.\n",
+    "arr = numpy.array([[1, 2, 3], [9, 6, 2]])\n",
+    "print(arr * 10)\n",
+    "\n",
+    "# - Create an array of integers and calculate the mean, sum, and maximum value.\n",
+    "arr = numpy.arange(9)\n",
+    "print(numpy.mean(arr))\n",
+    "print(arr.sum())\n",
+    "print(arr.max())"
    ]
   }
  ],
