--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -161,6 +161,59 @@
     "print(arr.sum())\n",
     "print(arr.max())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n",
+      "[[ 1  5  9 13]\n",
+      " [ 2  6 10 14]\n",
+      " [ 3  7 11 15]\n",
+      " [ 4  8 12 16]]\n",
+      "Original 3D array:\n",
+      "[[[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]\n",
+      "\n",
+      " [[0 0 0]\n",
+      "  [0 0 0]\n",
+      "  [0 0 0]]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 4\n",
+    "\n",
+    "# - Create an array of numbers from 1 to 16 and reshape it into a 4x4 array.\n",
+    "arr = numpy.arange(1, 17).reshape(4, 4)\n",
+    "print(arr)\n",
+    "\n",
+    "# - Transpose the previous array (swap rows and columns).\n",
+    "print(arr.T)\n",
+    "\n",
+    "# - From a 3D array with shape (2, 3, 3), flatten it into a 2D array.\n",
+    "arr = numpy.zeros((2, 3, 3), dtype=int)  # Forma correta: (2, 3, 3)\n",
+    "flattened_arr_2d = arr.flatten().reshape(9, 2)\n",
+    "print(flattened_arr_2d)"
+   ]
   }
  ],
  "metadata": {
