--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +54,9 @@
      "text": [
       "[0 0 0 0 0]\n",
       "[10 11 12 13 14 15 16 17 18 19 20]\n",
-      "[[62 48 90]\n",
-      " [12 39 12]\n",
-      " [89  6 93]]\n"
+      "[[75 60 98]\n",
+      " [59 16 26]\n",
+      " [50 25 74]]\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,14 +179,6 @@
       " [ 2  6 10 14]\n",
       " [ 3  7 11 15]\n",
       " [ 4  8 12 16]]\n",
-      "Original 3D array:\n",
-      "[[[0 0 0]\n",
-      "  [0 0 0]\n",
-      "  [0 0 0]]\n",
-      "\n",
-      " [[0 0 0]\n",
-      "  [0 0 0]\n",
-      "  [0 0 0]]]\n",
       "[[0 0]\n",
       " [0 0]\n",
       " [0 0]\n",
@@ -217,8 +209,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
