--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -54,9 +54,9 @@
      "text": [
       "[0 0 0 0 0]\n",
       "[10 11 12 13 14 15 16 17 18 19 20]\n",
-      "[[75 60 98]\n",
-      " [59 16 26]\n",
-      " [50 25 74]]\n"
+      "[[40  5 77]\n",
+      " [66 18 53]\n",
+      " [31 35 31]]\n"
      ]
     }
    ],
@@ -205,6 +205,43 @@
     "arr = numpy.zeros((2, 3, 3), dtype=int)  # Forma correta: (2, 3, 3)\n",
     "flattened_arr_2d = arr.flatten().reshape(9, 2)\n",
     "print(flattened_arr_2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[14 19 22]\n",
+      " [30 34 25]\n",
+      " [65 77 52]]\n",
+      "[0 1 2]\n",
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n",
+      "[[ 0  1  4]\n",
+      " [ 0  4 10]\n",
+      " [ 0  7 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 5\n",
+    "\n",
+    "# - Create a (3, 3) size integer array and add 10 to each element of the array without using loops.\n",
+    "arr = numpy.array([ [4, 9, 12], [20, 24, 15], [55, 67, 42]])\n",
+    "arr += 10\n",
+    "print(arr)\n",
+    "\n",
+    "# - Multiply a 1D array of size 3 by a 2D array of size (3, 3).\n",
+    "arr_1d = numpy.arange(3)\n",
+    "arr_2d = numpy.arange(9).reshape(3, 3)\n",
+    "arr_mul = arr_1d * arr_2d\n",
+    "print(arr_mul)"
    ]
   }
  ],
