--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -54,9 +54,9 @@
      "text": [
       "[0 0 0 0 0]\n",
       "[10 11 12 13 14 15 16 17 18 19 20]\n",
-      "[[40  5 77]\n",
-      " [66 18 53]\n",
-      " [31 35 31]]\n"
+      "[[55  8 25]\n",
+      " [71 58 62]\n",
+      " [11 90 84]]\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -219,10 +219,6 @@
       "[[14 19 22]\n",
       " [30 34 25]\n",
       " [65 77 52]]\n",
-      "[0 1 2]\n",
-      "[[0 1 2]\n",
-      " [3 4 5]\n",
-      " [6 7 8]]\n",
       "[[ 0  1  4]\n",
       " [ 0  4 10]\n",
       " [ 0  7 16]]\n"
@@ -242,6 +238,47 @@
     "arr_2d = numpy.arange(9).reshape(3, 3)\n",
     "arr_mul = arr_1d * arr_2d\n",
     "print(arr_mul)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  8 13  1 11]\n",
+      " [ 7  9  7  0  6]\n",
+      " [ 0 11  9 10 12]\n",
+      " [14  0  2  1 11]\n",
+      " [ 3  3 10  8  9]]\n",
+      "[[ 0  0 13  0 11]\n",
+      " [ 0  0  0  0  0]\n",
+      " [ 0 11  0 10 12]\n",
+      " [14  0  0  0 11]\n",
+      " [ 0  0 10  0  0]]\n",
+      "[10  8 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 6\n",
+    "\n",
+    "# - Create a random integer array of size (5, 5) and use a mask to replace all values less than 10 with 0.\n",
+    "arr_rd = numpy.random.random((5, 5)) * 15\n",
+    "\n",
+    "arr_rd = arr_rd.astype(int) # Convert to int\n",
+    "\n",
+    "print(arr_rd)\n",
+    "arr_rd[arr_rd < 10] = 0\n",
+    "print(arr_rd)\n",
+    "\n",
+    "# - Given the array `arr = np.array([10, 5, 8, 12, 6, 2])`, create a mask to select only the values greater than 6.\n",
+    "arr = numpy.array([10, 5, 8, 12, 6, 2])\n",
+    "sub_arr = arr[arr > 6]\n",
+    "print(sub_arr)\n"
    ]
   }
  ],
