--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -45,21 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 0 0]\n",
-      "[10 11 12 13 14 15 16 17 18 19 20]\n",
-      "[[55  8 25]\n",
-      " [71 58 62]\n",
-      " [11 90 84]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Question 1\n",
     "import numpy\n",
@@ -92,20 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "[4 5 6 7]\n",
-      "[[0 1 2]\n",
-      " [5 6 7]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Question 2\n",
     "\n",
@@ -125,23 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The addition equal: [0 2 4 6 8]\n",
-      "The multiplication equal: [ 0  1  4  9 16]\n",
-      "[[10 20 30]\n",
-      " [90 60 20]]\n",
-      "4.0\n",
-      "36\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Question 3\n",
     "\n",
@@ -164,33 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  2  3  4]\n",
-      " [ 5  6  7  8]\n",
-      " [ 9 10 11 12]\n",
-      " [13 14 15 16]]\n",
-      "[[ 1  5  9 13]\n",
-      " [ 2  6 10 14]\n",
-      " [ 3  7 11 15]\n",
-      " [ 4  8 12 16]]\n",
-      "[[0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]\n",
-      " [0 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Question 4\n",
     "\n",
@@ -209,22 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[14 19 22]\n",
-      " [30 34 25]\n",
-      " [65 77 52]]\n",
-      "[[ 0  1  4]\n",
-      " [ 0  4 10]\n",
-      " [ 0  7 16]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Question 5\n",
     "\n",
@@ -242,27 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  8 13  1 11]\n",
-      " [ 7  9  7  0  6]\n",
-      " [ 0 11  9 10 12]\n",
-      " [14  0  2  1 11]\n",
-      " [ 3  3 10  8  9]]\n",
-      "[[ 0  0 13  0 11]\n",
-      " [ 0  0  0  0  0]\n",
-      " [ 0 11  0 10 12]\n",
-      " [14  0  0  0 11]\n",
-      " [ 0  0 10  0  0]]\n",
-      "[10  8 12]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Question 6\n",
     "\n",
@@ -279,6 +187,35 @@
     "arr = numpy.array([10, 5, 8, 12, 6, 2])\n",
     "sub_arr = arr[arr > 6]\n",
     "print(sub_arr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 7\n",
+    "\n",
+    "# - Create two arrays of shape (2, 3). Concatenate them along axis 0 (rows) and axis 1 (columns).\n",
+    "arr_1 = numpy.array([[1, 2, 3], [10, 20, 30]])\n",
+    "arr_2 = arr_1 * 2\n",
+    "\n",
+    "concat_axis_0 = numpy.concatenate((arr_1, arr_2), axis=0)\n",
+    "print(concat_axis_0)\n",
+    "\n",
+    "concat_axis_1 = numpy.concatenate((arr_1, arr_2), axis=1)\n",
+    "print(concat_axis_1)\n",
+    "\n",
+    "# - Divide an array of 10 elements into 2 arrays of equal size.\n",
+    "arr = numpy.arange(10)\n",
+    "\n",
+    "arr_split = numpy.split(arr, 2) # The split method return a list of arrays\n",
+    "\n",
+    "for sub_arr in arr_split:\n",
+    "    print(sub_arr)\n",
+    "\n",
+    "# Use the numpy.array_split() for irregular sizes"
    ]
   }
  ],
