--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -45,9 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0]\n",
+      "[10 11 12 13 14 15 16 17 18 19 20]\n",
+      "[[35  7 24]\n",
+      " [89 21 20]\n",
+      " [29 64 21]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 1\n",
     "import numpy\n",
@@ -80,9 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[4 5 6 7]\n",
+      "[[0 1 2]\n",
+      " [5 6 7]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 2\n",
     "\n",
@@ -102,9 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The addition equal: [0 2 4 6 8]\n",
+      "The multiplication equal: [ 0  1  4  9 16]\n",
+      "[[10 20 30]\n",
+      " [90 60 20]]\n",
+      "4.0\n",
+      "36\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 3\n",
     "\n",
@@ -127,9 +164,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n",
+      "[[ 1  5  9 13]\n",
+      " [ 2  6 10 14]\n",
+      " [ 3  7 11 15]\n",
+      " [ 4  8 12 16]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 4\n",
     "\n",
@@ -148,9 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[14 19 22]\n",
+      " [30 34 25]\n",
+      " [65 77 52]]\n",
+      "[[ 0  1  4]\n",
+      " [ 0  4 10]\n",
+      " [ 0  7 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 5\n",
     "\n",
@@ -168,9 +242,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9  8 10  8 14]\n",
+      " [ 5  6  9 14 13]\n",
+      " [11 11  7  2  7]\n",
+      " [ 7  8  2  2 11]\n",
+      " [ 0 10  9  7 12]]\n",
+      "[[ 0  0 10  0 14]\n",
+      " [ 0  0  0 14 13]\n",
+      " [11 11  0  0  0]\n",
+      " [ 0  0  0  0 11]\n",
+      " [ 0 10  0  0 12]]\n",
+      "[10  8 12]\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 6\n",
     "\n",
@@ -191,9 +283,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [10 20 30]\n",
+      " [ 2  4  6]\n",
+      " [20 40 60]]\n",
+      "[[ 1  2  3  2  4  6]\n",
+      " [10 20 30 20 40 60]]\n",
+      "[0 1 2 3 4]\n",
+      "[5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 7\n",
     "\n",
@@ -216,6 +323,44 @@
     "    print(sub_arr)\n",
     "\n",
     "# Use the numpy.array_split() for irregular sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[ 0.          0.84147098  0.90929743  0.14112001 -0.7568025  -0.95892427\n",
+      " -0.2794155   0.6569866   0.98935825  0.41211849]\n",
+      "[  1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17  18\n",
+      "  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35  36\n",
+      "  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54\n",
+      "  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71  72\n",
+      "  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89  90\n",
+      "  91  92  93  94  95  96  97  98  99 100]\n",
+      "[ 4  9 14 19 24 29 34 39 44 49 54 59 64 69 74 79 84 89 94 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 8\n",
+    "\n",
+    "# - Create an array of integers from 0 to 9 and calculate the sine of each number.\n",
+    "arr = numpy.arange(10)\n",
+    "sine_arr = numpy.sin(arr)\n",
+    "print(arr)\n",
+    "print(sine_arr)\n",
+    "\n",
+    "# - Create an array of values from 1 to 100 and find the indices of the values that are divisible by 5.\n",
+    "arr = numpy.arange(1, 101)\n",
+    "divisible_by_5 = numpy.where(arr % 5 == 0)[0]\n",
+    "print(arr)\n",
+    "print(divisible_by_5)"
    ]
   }
  ],
